# netchat_bridge

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: configuration.rs  database.rs  language.rs  logging.rs  main.rs  netchat.rs  permissions.rs  secrets.rs  utilities.rs
src/commands/: basic.rs  bridge.rs  mod.rs  username.rs
