[package]
name = "netchat_bridge"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4.26"
clap = { version = "4.4.1", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
matrix-sdk = "0.6.2"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
sled = "0.34.7"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
